--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+<!-- código omitido -->
+
+<img src="cataratas-do-iguac.jpg" alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
+
+<!-- código omitido --><!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -69,3 +73,4 @@
     </footer>
 </body>
 </html>
+https://www.youtube.com/v=ILh7nDEKGqc&pp=ygUXSW1wYWN0byBkbyBEZXNtYXRhbWVudG8%3D
